force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Portfolio__c/agf__PPM_Portfolio__c.object-meta.xml
<CustomObject>
    <description>PPM: Used to capture Portfolio information including associated Requests, Projects, and Sustaining efforts.</description>
    <label>Portfolio</label>
    <nameField>
        <label>Portfolio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>