force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Portfolio__c/fields/agf__Portfolio_Goals__c.field-meta.xml
<CustomField>
    <fullName>agf__Portfolio_Goals__c</fullName>
    <label>Portfolio Goals</label>
    <type>TextArea</type>
</CustomField>