force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Portfolio__c/fields/agf__Portfolio_Health__c.field-meta.xml
<CustomField>
    <fullName>agf__Portfolio_Health__c</fullName>
    <label>Portfolio Health</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <color>#BBBBBB</color>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>On Track</fullName>
                <color>#419249</color>
                <label>On Track</label>
            </value>
            <value>
                <fullName>Watch</fullName>
                <color>#F3D904</color>
                <label>Watch</label>
            </value>
            <value>
                <fullName>Blocked</fullName>
                <color>#CC0000</color>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#3366FF</color>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <color>#000000</color>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <color>#DDDDDD</color>
                <label>On Hold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>