force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Portfolio__c/fields/agf__Portfolio_Owner__c.field-meta.xml
<CustomField>
    <fullName>agf__Portfolio_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Portfolios</relationshipName>
    <type>Lookup</type>
</CustomField>