force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Portfolio__c/listViews/agf__All.listView-meta.xml
<ListView>
    <fullName>agf__All</fullName>
    <columns>NAME</columns>
    <columns>agf__Portfolio_Health__c</columns>
    <columns>agf__Portfolio_Health_Color__c</columns>
    <columns>agf__Portfolio_Manager__c</columns>
    <columns>agf__Portfolio_Summary__c</columns>
    <columns>agf__Portfolio_Goals__c</columns>
    <columns>agf__Portfolio_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>